--- a/axum_graphql/Cargo.toml
+++ b/axum_graphql/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum_graph"
+name = "axum_graphql"
 version = "0.1.0"
 edition = "2021"
 
@@ -31,3 +31,6 @@ tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
 futures = { version = "0.3" }
 chrono = { version = "0.4", features = ["serde"] }
 bigdecimal = { version = "0.4.3" }
+
+diesel = { version = "2.2.0", features = ["postgres"] }
+diesel_demo = { path = "../diesel_demo" }
