sqlx demo tested

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 JAEGER_ENABLED=true
 # To enable compile time sql validation from sqlx
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/myapp
+# Diesel config file: used by `diesel setup`
+DIESEL_CONFIG_FILE=diesel.toml
