--- a/sqlx_demo/Cargo.toml
+++ b/sqlx_demo/Cargo.toml
@@ -16,9 +16,4 @@ sqlx = { version = "0.7", features = [
 serde_json = "1.0"
 serde = { version = "1" }
 futures = { version = "0.3" }
-tracing = { version = "0.1" }
-tracing-subscriber = { version = "0.3", features = [
-  "json",
-  "env-filter",
-  "std",
-] }
+tracer = { path = "../tracer" }
