> integrate seaorm with async_graphql

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ JAEGER_ENABLED=true
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/myapp
 # Diesel config file: used by `diesel setup`
 DIESEL_CONFIG_FILE=diesel.toml
+
+
+# Use for SeaORM 
+COMPLEXITY_LIMIT=10
+DEPTH_LIMIT=10
