--- a/seaorm_demo/migration/Cargo.toml
+++ b/seaorm_demo/migration/Cargo.toml
@@ -19,4 +19,6 @@ features = [
   # e.g.
   # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
   # "sqlx-postgres",         # `DATABASE_DRIVER` feature
+  "sqlx-postgres",
+  "runtime-tokio-rustls",
 ]
