--- a/seaorm_demo/Cargo.toml
+++ b/seaorm_demo/Cargo.toml
@@ -4,21 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sea-orm = { version = "0.12", features = [
-  "sqlx-postgres",
-  "runtime-tokio-rustls",
-  "macros",
-  "with-uuid",
-  "with-chrono",
-  "with-json",
-  "with-bigdecimal",
-] }
-serde_json = "1.0"
-serde = { version = "1" }
-tracer = { path = "../tracer" }
-lazy_static = { version = "1.4.0" }
-async-graphql = "6.0.6"
-async-graphql-axum = "6.0.6"
-axum = "0.6.20"
-tokio = { version = "1.32.0", features = ["full"] }
-futures = { version = "0.3" }
+api = { path = "./api" }
