--- a/seaorm_demo/entity/Cargo.toml
+++ b/seaorm_demo/entity/Cargo.toml
@@ -16,3 +16,7 @@ sea-orm = { version = "0.12", features = [
 async-graphql = "6.0.6"
 serde_json = "1.0"
 serde = { version = "1" }
+
+
+# [dependencies.async-graphql]
+# version = "6.0.6"
