--- a/seaorm_demo/service/Cargo.toml
+++ b/seaorm_demo/service/Cargo.toml
@@ -24,5 +24,10 @@ tokio = { version = "1.32.0", features = ["full"] }
 mock = ["sea-orm/mock"]
 
 [[test]]
-name = "mock"
+name = "user"
+required-features = ["mock"]
+
+
+[[test]]
+name = "acstor"
 required-features = ["mock"]
